<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="alert_delete_multiple">These items will be deleted</string>
    <string name="alert_delete_single">This item will be deleted</string>
    <string name="already_exists">already exists</string>
    <string name="app_name">File Manager</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="create_folder">Create folder</string>
    <string name="cut">Cut</string>
    <string name="cut_fail">Failed to cut</string>
    <string name="delete">Delete</string>
    <string name="delete_deny">No permission to delete.</string>
    <string name="delete_fail">Failed to delete</string>
    <string name="deleting">Deleting</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="encryption_menu">To safe</string>
    <string name="decryption_menu">Move out</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="empty_msg">(Empty Folder)</string>
    <string name="executable">Executable</string>
    <string name="insufficient_memory">Insufficient memory</string>
    <string name="sufficient_memory">Sufficient memory</string>
    <string name="invalid_empty_name">File or folder name cannot be empty</string>
    <string name="invalid_file_name">The specified file or folder name is too long,failed to create.</string>
    <string name="invalid_file_rename">The specified file or folder name is too long,failed to rename.</string>
    <string name="warn_invalid_rename">Rename failure，please input valid name.</string>
    <string name="send_file_max_size">Share files exceeds the max number of restrictions.</string>
    <string name="loading">Loading</string>
    <string name="modified_time">Modified</string>
    <string name="name">Name</string>
    <string name="new_folder">New folder</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="pasting">Pasting</string>
    <string name="paste_fail">Failed to paste</string>
    <string name="paste_same_folder">Cannot paste %s to the same directory</string>
    <string name="readable">Readable</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="selected">Selected</string>
    <string name="send_file">Send file</string>
    <string name="share">Share</string>
    <string name="size">Size</string>
    <string-array name="sort_by">
        <item>Type</item>
        <item>Name (A - Z)</item>
        <item>Size (big - small)</item>
        <item>Time (new - old)</item>
    </string-array>
    <string name="support_fail" product="default">This is not supported by phone</string>
    <string name="wait">Please wait\u2026</string>
    <string name="writable">Writable</string>
    <string name="yes">Yes</string>
    <string name="confirm_rename">Confirm Rename</string>
    <string name="invalid_char_prompt">You have input invalid character</string>
    <string name="msg_rename_ext">You are changing the file extension, which
    may cause the file not to be recognized. Are you sure to do this?</string>
    <string name="msg_unable_open_file">The file format is not supported.</string>
    <string name="added_favorite">Added to Favorites</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_zip">Zips</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_qq">QQ</string>
    <string name="category_wechat">WeChat</string>
    <string name="category_music">Audios</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pictures</string>
    <string name="category_video">Videos</string>
    <string name="confirm_know">OK</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="succeed_to_create_folder">Folder created successfully</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_sizes">%d Bytes</string>
    <string name="file_size">%d Byte</string>
    <string name="instruction">Enter the following address into your FTP Client</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="instruction_pre_onwifi">Please connect to Wi-Fi first</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_by">Sort by <xliff:g id="menu_item_sort">%1$s</xliff:g></string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_format">All format</string>
    <string name="new_folder_name">New folder</string>
    <string name="no_file">No files</string>
    <string name="no_wifi">Set Wi-Fi network</string>
    <string name="notif_server_starting">FTP Server started</string>
    <string name="notif_title">FTP Server</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect all</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_delete_folder_confirm_message">Confirm delete the folder?</string>
    <string name="operation_delete_folders_confirm_message">Confirm delete <xliff:g id="number">%d</xliff:g> folders?</string>
    <string name="operation_delete_file_confirm_message">Confirm delete the file?</string>
    <string name="operation_delete_files_confirm_message">Confirm delete <xliff:g id="number">%d</xliff:g> files?</string>
    <string name="operation_delete_folder_file_confirm_message">Confirm delete <xliff:g id="number">%1d</xliff:g> folders <xliff:g id="number">%2d</xliff:g> files?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select all</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sysfile">Show hidden files</string>
    <string name="operation_hide_sysfile">Hide hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="removed_favorite_first">First, remove from Favorites!</string>
    <string name="favorite_file_not_exist">Favorite file does not exist!</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="multi_select_title">Selected <xliff:g id="number">%1$s</xliff:g> items</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is</string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
    <string name="create_hidden_file">File will be hidden if its name starts with \'.\'.</string>
    <string name="confirm">OK</string>
    <string name="more">More</string>
    <string name="msg_change_name">Operation failed, please use a different name.</string>
    <string name="msg_create_fail">Failed to create a folder.</string>
    <string name="unmounted">%1$s is unmounted</string>
    <string name="tab_category">Categories</string>
    <string name="tab_remote">FTP</string>
    <string name="tab_file">Files</string>
    <string name="encryption_file">File safe</string>
    <string name="warn_invalid_forlder_name">Please input valid folder name.</string>
    <string name="all_storage">Storage space</string>
    <string name="storage_phone">Phone storage</string>
    <string name="storage_sd_card">SD card</string>
    <string name="storage_external_usb">USB storage</string>
    <string name="enable_sd_card">not available</string>
    <string name="file_info_name">Name:</string>
    <string name="search_empty">No matches</string>
    <string name="operation_compress">Compress file</string>
    <string name="operation_compress_invalid_name">Input compress file name</string>
    <string name="compress_failed_for_exists">Compress failed, destinaton file exists</string>
    <string name="operation_compressing">Compressing...</string>
    <string name="operation_decompress">Decompress file</string>
    <string name="decompress_to_current_dir">Decompress to current dir</string>
    <string name="operation_load">Load</string>
    <string name="operation_loading">Loading</string>
    <string name="decompress_to">Decompress to...</string>
    <string name="operation_decompressing">Decompressing...</string>
    <string name="decompress_failed_for_exists">Decompress failed, source file error or path exists</string>
    <string name="decompress_failed_for_nofress">Decompress failed, for insufficient memory</string>
    <string name="compress_save_name">File name:</string>
    <string name="compress_save_format">File format: zip</string>
    <string name="clear_wechat_temp_cache">Temporary caches</string>
    <string name="clear_wechat_three_months_ago">Old files 3 months ago</string>
    <string name="clear_wechat_chat_img_title">Chat images and videos</string>
    <string name="clear_wechat_download_file">Downloaded files</string>
    <string name="clear_wechat_saved_img_title">Saved images</string>
    <string name="notificaiton_clear_btn_text">Clearing</string>
    <string name="about_title">About</string>
    <string name="about_current_version">Current version</string>
    <string name="about_droi_copyright">Copyright©2018, Droi .All Rights Reserved</string>
    <string name="more_menu">More</string>
    <string name="input_password">Please enter the file safe passcode</string>
    <string name="forget_password">Forgot password</string>
    <string name="other_lock_type">Other encryption methods</string>
    <string name="lock_title_settings">Setting passcode</string>
    <string name="password_next">Next</string>
</resources>