<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/file_path_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_page_padding_top"
            android:divider="@drawable/list_item_divider"
            android:background="@color/app_theme_color_primary">
        </ListView>

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/app_theme_color_primary"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_no_file"/>

            <TextView
                android:id="@+id/empty_tv"
                android:textAppearance="@style/AppTextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_slash_padding_left"
                android:singleLine="true"
                android:text="@string/no_file"
                android:textColor="#cecece"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/moving_operation_bar"
        style="@style/AppContent.Button.BottomBar"
        android:visibility="gone" >
        <Button
            android:id="@+id/button_moving_confirm"
            style="@style/AppContent.Button.Bottom"
            android:text="@string/operation_paste" />
        <Button
            android:id="@+id/button_moving_cancel"
            style="@style/AppContent.Button.Bottom"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <Button
        android:id="@+id/cleanup_button"
        android:layout_width="@dimen/bottom_btn_width"
        android:layout_height="@dimen/bottom_btn_height"
        android:layout_marginTop="@dimen/bottom_btn_clean_margin_bottom"
        android:layout_marginBottom="@dimen/bottom_btn_clean_margin_bottom"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:enabled="false"
        android:background="@drawable/btn_bottom"
        android:textAppearance="@style/AppTextAppearance.BottomBtn"
        android:text="@string/notificaiton_clear_btn_text" />

</LinearLayout>