<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/about_icon_margin_bottom"
        android:layout_marginTop="@dimen/about_icon_margin_top"
        android:onClick="true"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/about_title_margin_bottom"
        android:text="@string/about_title"
        android:textAppearance="@style/AppTextAppearance.ItemName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_current_version"
            android:textAppearance="@style/AppTextAppearance.ItemOther"/>

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_version_margin_top"
            android:textAppearance="@style/AppTextAppearance.ItemOther"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/about_copyright_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_droi_copyright"
            android:textAppearance="@style/AppTextAppearance.ItemOther"/>
    </RelativeLayout>
</RelativeLayout>