<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="48dp"
                    android:src="@drawable/ic_lock"/>

                <TextView
                    android:id="@+id/password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/lock_title_settings"
                    android:textAppearance="@style/AppTextAppearance.PasswordTitle"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:id="@+id/head_tip"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input_password"
                        android:textAppearance="@style/AppTextAppearance.PasswordHeadTip"/>
                    <TextView
                        android:id="@+id/fail_wait_tip"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/AppTextAppearance.PasswordHeadTip"
                        android:visibility="gone"/>
                </FrameLayout>

                <EditText
                    android:id="@+id/password_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext|flagNoFullscreen|flagForceAscii"
                    android:focusable="true"
                    android:gravity="bottom|center"
                    android:background="@null"
                    style="@style/TextAppearance.PasswordEntry">
                </EditText>

                <TextView
                    android:id="@+id/typingverifyTitleLine"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/path_name_padding_left"
                    android:layout_alignBottom="@+id/password_input"
                    android:layout_marginTop="@dimen/path_name_padding_left"
                    android:layout_marginStart="@dimen/bottom_btn_margin_bottom"
                    android:layout_marginEnd="@dimen/bottom_btn_margin_bottom"
                    android:background="?android:attr/colorAccent" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/sub_tip"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/fail_tip"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textAppearance="@style/AppTextAppearance.Small"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/forget_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/forget_password"
                    android:visibility="gone"
                    android:textAppearance="@style/AppTextAppearance.Small"
                    android:textColor="@color/arc_progress_text_color2"/>

                <TextView
                    android:id="@+id/other_encryption_methods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_theme_color_accent"
                    android:text="@string/other_lock_type"
                    android:layout_marginTop="50dp"
                    android:clickable="true"
                    android:visibility="gone"
                    android:textAppearance="@style/AppTextAppearance.Medium"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp">
        <Button
            style="@android:style/Widget.Material.Button.Borderless"
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/app_theme_color_accent"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_next"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"/>
    </RelativeLayout>
</LinearLayout>
